First official website build

--- a/services.html
+++ b/services.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>About me</title>
+        <title>Services</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="style.css">
@@ -60,46 +60,32 @@
     
             <main id="swup" class="transition-fade">
                 <div id="Intro">
-                    <h1 id="page-subtitle" style="color: rgb(30, 92, 30); padding-bottom: 10px; font-weight: normal; font-size: 50px;">Cezary Czubała</h1>
-                    <img id="profilePic" src="./images/profile.jpg">
+                    <h1 id="page-subtitle" style="color: rgb(30, 92, 30); padding-bottom: 10px; font-weight: normal; font-size: 50px;">Services</h1>
+
                     <div class="content">
-                        <br>
-                        I am a Computer Science student at the University of Wrocław and I specialise in game development and competitive programming/algorithmics. Whilst living in London, UK from 2010 till 2018, I graduated the Canon Palmer Catholic Academy and got my GCSEs. I moved to Poland where I graduated High School nr. 9 in Częstochowa in 2021, and since I've been living in Wrocław, studying Computer Science. <br><br>
-                        My aforementioned fields of expertise are game development and algorithmics. I mainly create my games in the Unity game engine, but I also know my way around the Allegro5 game API for pure C. Additionally thanks to my experience with Unity and hence my implicated<br> knowledge of C#, I have experience in creating applications in the .NET framework as well as web apps that communicate with the cloud.
+                        You can contact me to make any arrangements regarding these services.
                     </div>
-                    <h1 id="page-subtitle" style="color: rgb(30, 92, 30); padding-bottom: 10px; font-weight: normal;">Experience</h1>
+
                     <div class="content">
                         <ul style="list-style: none; padding-top: 10px;">
                             <li>
-                                <h2 style="line-height: 10px; font-weight: normal;"> ZF Group (02/2019 - 04/2019)</h2>
-                                <h3>>Backend software developer<</h3>
+                                <h2 style="line-height: 10px; font-weight: normal;">High school tuition</h2>
                                 <p style="margin-right: 500px;">
-                                    An apprenticeship given as a form of reward for a VR-themed Game Jam hosted by the ZF Group. Me and my friend, with who I participated in the game jam, were tasked with creating a web application in the .NET framework that stored its information in an Azure database. We managed to finish the application, however our apprenticeship was cut short due to the Covid outbreak.
+                                    I offer maths and computer science tuition to high school students, preferably stationary. Prices are to be settled, but generally it's 60zł per hour and 100zł for 2 hours. I also offer English conversation practice for 50zł per hour.
                                 </p>
                             </li>
                             <li style="padding-top: 30px;">
-                                <h2 style="line-height: 10px; font-weight: normal;"> High school nr. 9 in Częstochowa (since October 2021)</h2>
-                                <h3>>Algorithmics teacher<</h3>
+                                <h2 style="line-height: 10px; font-weight: normal;"> Programming projects</h2>
                                 <p style="margin-right: 500px;">
-                                    Along with a friend we lead Saturday workshops in our old high school during which we present OI (polish Informatics Olympiad) level problems, their solutions and different competitive programming techniques. We also organize programming camps for the students (unfortunately we are somewhat limited due to the Covid situation).
+                                    You can hire me (preferably part-time, as I've got university) as a programmer for your projects. I am comfortable in git and have experience working in larger companies on of course larger projects. The pricing is to be settled and is dependent on how requiring the job will be.
                                 </p>
                             </li>
                             <li style="padding-top: 30px;">
-                                <h2 style="line-height: 10px; font-weight: normal;"> Upwork (since 2020)</h2>
-                                <h3>>Freelance game developer<</h3>
+                                <h2 style="line-height: 10px; font-weight: normal;">Upwork profile</h2>
                                 <p style="margin-right: 500px;">
-                                    During my free time I accept programming projects, usually focused around game development in the Unity game engine; these range from writing small fragments of code to creating whole games (usually mobile, as that's in demand). You can find reviews from my clients on my Upwork profile linked in the Contact page.
+                                    As aforementioned on my "About me" page, I do programming jobs on Upwork, and if you feel more comfortable hiring me there, then go right ahead. You can find the link to my Upwork profile in my Contact page.
                                 </p>
                             </li>
-                        </ul>
-                    </div>
-                    <h1 id="page-subtitle" style="color: rgb(30, 92, 30); padding-bottom: 10px; font-weight: normal;">Skills and certifications</h1>
-                    <div class="content">
-                        <ul style="font-size: larger; line-height: 40px;">
-                            <li>English (certified C2 level)</li>
-                            <li>Programming languages: C, C++, C#, Python, Javascript, HTML, CSS</li>
-                            <li>Game dev software: Unity, Blender, Audacity, etc.</li>
-                            <li>Well-versed in Linux and git</li>
                         </ul>
                     </div>
                 </div>
