--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
             </footer> 
         </div>
 
-        <script src="/node_modules/swup/dist/swup.min.js"></script>  
+        <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>   
         <script>
             const swup = new Swup();
         </script>
