--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </main>
         </div>
 
-        <script src="/node_modules/swup/dist/swup.min.js"></script>  
+        <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>   
         <script>
             const swup = new Swup();
         </script>
