Update style.css for mobile

--- a/contact.html
+++ b/contact.html
@@ -60,11 +60,12 @@
     
             <main id="swup" class="transition-fade">
                 <div id="Intro">
-                    <h1 id="page-subtitle" style="color: rgb(30, 92, 30); padding-bottom: 10px; font-weight: normal; font-size: 50px;">Contact</h1>
+                    <h1 id="page-subtitle">Contact</h1>
 
-                    <p style="padding-left: 500px; padding-top: 40px; font-size: 20px; line-height: 40px;">
+                    <p class="ContactInfo">
                         <i class="fa-brands fa-linkedin"></i><a href="https://www.linkedin.com/in/cezary-czuba%C5%82a-47a090207/?originalSubdomain=pl" style="text-decoration: none; color: black;"> Cezary Czubała</a><br>
                         <i class="fa-brands fa-instagram"></i><a href="https://www.instagram.com/" style="text-decoration: none; color: black;"> @cez_gd</a><br>
+                        <i class="fa-brands fa-github"></i><a href="https://github.com/Cez02" style="text-decoration: none; color: black;"> Cez02</a><br>
                         Upwork: <a href="https://www.upwork.com/freelancers/~01f2fdc5265dd534d9" style="text-decoration: none; color: black;"> Cezary C.</a><br>
                         <i class="fa-solid fa-phone"></i> +48 730 071<br>
                         <i style="font-style: normal;">e-mail: czarek.czubala@gmail.com</i><br>
