--- a/index.html
+++ b/index.html
@@ -60,34 +60,34 @@
     
             <main id="swup" class="transition-fade">
                 <div id="Intro">
-                    <h1 id="page-subtitle" style="color: rgb(30, 92, 30); padding-bottom: 10px; font-weight: normal; font-size: 50px;">Cezary Czubała</h1>
+                    <h1 id="page-subtitle">Cezary Czubała</h1>
                     <img id="profilePic" src="./images/profile.jpg">
                     <div class="content">
                         <br>
                         I am a Computer Science student at the University of Wrocław and I specialise in game development and competitive programming/algorithmics. Whilst living in London, UK from 2010 till 2018, I graduated the Canon Palmer Catholic Academy and got my GCSEs. I moved to Poland where I graduated High School nr. 9 in Częstochowa in 2021, and since I've been living in Wrocław, studying Computer Science. <br><br>
                         My aforementioned fields of expertise are game development and algorithmics. I mainly create my games in the Unity game engine, but I also know my way around the Allegro5 game API for pure C. Additionally thanks to my experience with Unity and hence my implicated<br> knowledge of C#, I have experience in creating applications in the .NET framework as well as web apps that communicate with the cloud.
                     </div>
-                    <h1 id="page-subtitle" style="color: rgb(30, 92, 30); padding-bottom: 10px; font-weight: normal;">Experience</h1>
+                    <h1 id="page-subtitle">Experience</h1>
                     <div class="content">
-                        <ul style="list-style: none; padding-top: 10px;">
-                            <li>
-                                <h2 style="line-height: 10px; font-weight: normal;"> ZF Group (02/2019 - 04/2019)</h2>
+                        <ul style="list-style: none; padding-top: 10px; width: 100%; padding-left: 0;">
+                            <li class="experienceEntry">
+                                <h2> ZF Group (02/2019 - 04/2019)</h2>
                                 <h3>>Backend software developer<</h3>
-                                <p style="margin-right: 500px;">
+                                <p>
                                     An apprenticeship given as a form of reward for a VR-themed Game Jam hosted by the ZF Group. Me and my friend, with who I participated in the game jam, were tasked with creating a web application in the .NET framework that stored its information in an Azure database. We managed to finish the application, however our apprenticeship was cut short due to the Covid outbreak.
                                 </p>
                             </li>
-                            <li style="padding-top: 30px;">
-                                <h2 style="line-height: 10px; font-weight: normal;"> High school nr. 9 in Częstochowa (since October 2021)</h2>
+                            <li class="experienceEntry">
+                                <h2> High school nr. 9 in Częstochowa (since October 2021)</h2>
                                 <h3>>Algorithmics teacher<</h3>
-                                <p style="margin-right: 500px;">
+                                <p>
                                     Along with a friend we lead Saturday workshops in our old high school during which we present OI (polish Informatics Olympiad) level problems, their solutions and different competitive programming techniques. We also organize programming camps for the students (unfortunately we are somewhat limited due to the Covid situation).
                                 </p>
                             </li>
-                            <li style="padding-top: 30px;">
-                                <h2 style="line-height: 10px; font-weight: normal;"> Upwork (since 2020)</h2>
+                            <li class="experienceEntry">
+                                <h2> Upwork (since 2020)</h2>
                                 <h3>>Freelance game developer<</h3>
-                                <p style="margin-right: 500px;">
+                                <p>
                                     During my free time I accept programming projects, usually focused around game development in the Unity game engine; these range from writing small fragments of code to creating whole games (usually mobile, as that's in demand). You can find reviews from my clients on my Upwork profile linked in the Contact page.
                                 </p>
                             </li>
@@ -114,6 +114,9 @@
         <script>
             const swup = new Swup();
         </script>
+
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
     </body>
 
 </html>
