--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
             </div>
     
             <main id="swup" class="transition-fade">
-                <h1 id="page-subtitle" style="color: rgb(30, 92, 30);  padding-left: 0px; padding-bottom: 10px; font-weight: normal; text-align: center;">Projects</h1>
+                <h1 id="page-subtitle">Projects</h1>
 
                 <div id="ProjectsContainer">
                     <div class="ProjectEntry" onclick="location.href='https://play.google.com/store/apps/details?id=com.Cez.BoatingAway';" style="cursor: pointer;">
