--- a/services.html
+++ b/services.html
@@ -60,7 +60,7 @@
     
             <main id="swup" class="transition-fade">
                 <div id="Intro">
-                    <h1 id="page-subtitle" style="color: rgb(30, 92, 30); padding-bottom: 10px; font-weight: normal; font-size: 50px;">Services</h1>
+                    <h1 id="page-subtitle">Services</h1>
 
                     <div class="content">
                         You can contact me to make any arrangements regarding these services.
@@ -68,21 +68,21 @@
 
                     <div class="content">
                         <ul style="list-style: none; padding-top: 10px;">
-                            <li>
-                                <h2 style="line-height: 10px; font-weight: normal;">High school tuition</h2>
-                                <p style="margin-right: 500px;">
+                            <li class="experienceEntry">
+                                <h2>High school tuition</h2>
+                                <p>
                                     I offer maths and computer science tuition to high school students, preferably stationary. Prices are to be settled, but generally it's 60zł per hour and 100zł for 2 hours. I also offer English conversation practice for 50zł per hour.
                                 </p>
                             </li>
-                            <li style="padding-top: 30px;">
-                                <h2 style="line-height: 10px; font-weight: normal;"> Programming projects</h2>
-                                <p style="margin-right: 500px;">
+                            <li class="experienceEntry">
+                                <h2> Programming projects</h2>
+                                <p>
                                     You can hire me (preferably part-time, as I've got university) as a programmer for your projects. I am comfortable in git and have experience working in larger companies on of course larger projects. The pricing is to be settled and is dependent on how requiring the job will be.
                                 </p>
                             </li>
-                            <li style="padding-top: 30px;">
-                                <h2 style="line-height: 10px; font-weight: normal;">Upwork profile</h2>
-                                <p style="margin-right: 500px;">
+                            <li class="experienceEntry">
+                                <h2>Upwork profile</h2>
+                                <p>
                                     As aforementioned on my "About me" page, I do programming jobs on Upwork, and if you feel more comfortable hiring me there, then go right ahead. You can find the link to my Upwork profile in my Contact page.
                                 </p>
                             </li>
