--- a/contact.html
+++ b/contact.html
@@ -71,17 +71,20 @@
                         <i style="font-style: normal;">e-mail: czarek.czubala@gmail.com</i><br>
                     </p>
                 </div>
-            </main>
 
-            <footer style="padding-top: 50px;">
-                <p style="text-align: center;">Website by Cezary Czubała<br>Hosted on our beloved git service Github</p>
-            </footer> 
+                <footer style="padding-top: 50px;">
+                    <p style="text-align: center;">Website by Cezary Czubała<br>Hosted on our beloved git service Github</p>
+                </footer> 
+                
+            </main>
         </div>
 
         <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>   
         <script>
             const swup = new Swup();
         </script>
+
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     </body>
 
 </html>
