Fix phone number

--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
                         <i class="fa-brands fa-instagram"></i><a href="https://www.instagram.com/" style="text-decoration: none; color: black;"> @cez_gd</a><br>
                         <i class="fa-brands fa-github"></i><a href="https://github.com/Cez02" style="text-decoration: none; color: black;"> Cez02</a><br>
                         Upwork: <a href="https://www.upwork.com/freelancers/~01f2fdc5265dd534d9" style="text-decoration: none; color: black;"> Cezary C.</a><br>
-                        <i class="fa-solid fa-phone"></i> +48 730 071<br>
+                        <i class="fa-solid fa-phone"></i> +48 730 071 704<br>
                         <i style="font-style: normal;">e-mail: czarek.czubala@gmail.com</i><br>
                     </p>
                 </div>
@@ -75,7 +75,7 @@
                 <footer style="padding-top: 50px;">
                     <p style="text-align: center;">Website by Cezary Czubała<br>Hosted on our beloved git service Github</p>
                 </footer> 
-                
+
             </main>
         </div>
 
